Fix Speaker registration button's visibility in mobile view (#4)
* Fix Speaker registeration button's visibility in mobile view

* Fix Tickets and speaker registration button alignment

* Remove btn-register class and & optimize CSS rules.

--- a/css/custom.css
+++ b/css/custom.css
@@ -192,3 +192,13 @@
 #myBtn:hover {
     background-color: transparent;
 }
+@media all and (max-width: 767px) {
+  .hero-slider .btn-hollow {
+    display: inline-block;
+    margin-left: 0;
+  }
+  .hero-slider .btn{
+    margin-bottom: 15px;
+    margin-right: 8px;
+  }
+}
